# MetaWave_QC_Compiler

./: CMakeLists.txt  README.md
examples/: main.cpp
include/: qc_expression_tree.h
include/core/: expression.h  index.h  operator.h  symbol.h  tensor.h
include/core/autogen_cursor/: expression.h  index.h  operator.h  qc_expression_tree.h  simplifier.h  symbol.h  tensor.h
include/core/index_notation/: index_attributes.h  index_notation_metafunc.h  index_notation_nodes.h  index_notation_nodes_abc.h  index_notation_nodes_index.h  index_notation_nodes_operator.h  index_notation_nodes_tensor.h  index_notation_printer.h  index_notation_qc_operation.h  index_notation_rewriter.h  index_notation_visitor.h  wick_theorem.h
include/simplification/: simplifier.h
include/util/: collections.h  error.h  functions.h  name_generator.h  scopedmap.h  scopedset.h  singleton.h  strings.h  type.h  variadic.h
include/util/CRTP/: comparable.h  intrusive_ptr.h  manageable.h  printable.h  uncopyable.h
src/: expression.cpp  simplifier.cpp  symbol.cpp
src/core/autogen_cursor/: expression.cpp  simplifier.cpp  symbol.cpp
src/index_notation/: index_attributes.cpp
src/util/: error.cpp  name_generator.cpp  strings.cpp  type.cpp
